--- a/styles/index.css
+++ b/styles/index.css
@@ -1,371 +1,45 @@
-body {
-  display: block;
-  min-width: 320px;
-  padding-left: 8.5rem;
-  font-family: "Open Sans", serif;
-  color: #fff;
-  background: #1d1d1d;
-  margin: 0;
-}
+@import './variables.css';
 
-html {
-  scroll-behavior: smooth;
-}
-
-/****** Fonts ******/
-@font-face {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/static/OpenSans-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Open Sans";
-  font-style: bold;
-  font-weight: 400;
-  src: url("../fonts/static/OpenSans-Bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Open Sans";
-  font-style: italic;
-  font-weight: 400;
-  src: url("../fonts/static/OpenSans-Italic.ttf") format("truetype");
-}
-
-
-/****** Navbar ******/
-.main-menu {
-  background: #181818;
-  width: 8.5rem;
-  height: 100vh;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  z-index: 3;
-  position: fixed;
-}
-
-.main-menu__top {
-  background: #000;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem 0;
-}
-
-.main-menu__top a {
-  font-size: 1.7rem;
-  font-weight: 600;
-  color: #fff;
-}
-
-.main-menu__top>span {
-  font-size: 0.8rem;
-  color: #a5a5a5;
-  margin-top: 1rem;
-}
-
-.main-menu__nav {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-top: 1px solid #282828;
-}
-
-.main-menu__nav a {
-  text-align: center;
-  width: 100%;
-  display: block;
-  color: #909096;
-  line-height: 3.5rem;
-  border-bottom: 1px solid #282828;
-}
-
-.main-menu__nav a:hover,
-.main-menu__nav a:focus {
-  color: #2D9CDB;
-}
-
-.social {
-  color: #909096;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  height: 15rem;
-}
-
-.social li {
-  margin: 0 10px;
-}
-
-a {
-  text-decoration: none;
-}
-
-.section-full-page {
-  padding: 3rem;
-  height: 90vh;
-  position: relative;
-}
-
-.section-main-content {
-  padding-left: 5rem;
-}
-
-.section-main-content p {
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-.section-header {
-  color: #2D9CDB;
-  font-size: 3.5rem;
-  margin: 0 0 2rem;
-  line-height: 1.1;
-}
-
-
-/****** Home ******/
-.home {
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-}
-
-.home h1 {
-  font-size: 5rem;
-  line-height: 4.7rem;
-  margin: 0;
-}
-
-.home p {
-  font-size: 1.5rem;
-  color: #8d8d8d;
-  margin-top: 2rem;
-  letter-spacing: 2px;  
-}
-
-.flat-button {
-  display: block;
-  border: 1px solid;
-  height: 50px;
-  background: #1d1d1d;
-  color: #2D9CDB;
-  font-size: 14px;
-  letter-spacing: 2px;
-  text-decoration: none;
-  margin-top: 20px;
-  position: relative;
-  width: 100%;
-  max-width: 200px;
-  line-height: 50px;
-  text-align: center;
-  transition: 0.3s ease-out all;
-}
-
-.flat-button:hover {
-  background: #2D9CDB;
-  color: #fff;
-  border-color: #2D9CDB;
-  transition: 0.3s slide-in all;
-}
-
-
-/****** About ******/
 .about {
   overflow: hidden;
   display: flex;
-  align-items: center;
-  justify-content: space-between
 }
 
 .about-info {
   width: 40%;
+  padding-right: 4rem;
+  padding-left: 0;
 }
 
 .about-img {
-  padding-left: 5rem;
-  width: 60%;
-}
-
-
-/****** Skills ******/
-.skills {
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: space-between
-}
-
-.skills-info {
-  width: 40%;
-  padding-right: 5rem;
-}
-
-.skills-details {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-}
-
-.chart {
-  margin-bottom: 1rem;
-}
-
-.chart span {
-  font-size: 16px;
-  display: block;
-  margin-bottom: 7px;
-}
-
-.chart footer {
-  background-color: #373737;
-}
-
-.chart footer div {
-  height: 2px;
-}
-
-.work-row {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 3rem;
-}
-
-.work-card {
-  width: 50%;
-  background: #2a2a2a;
-  padding: 1.5rem;
-}
-
-.work-card header {
-  font-size: 1rem;
-  line-height: 1.2rem;
-  margin-bottom: 1rem;
-}
-
-.work-card section {
-  font-size: 0.9rem;
-  color: #ababab;
-  margin-bottom: 1rem;
-}
-
-.work-card footer {
-  font-size: 1rem;
-  color: #ababab;
-  line-height: 1.3rem;
-}
-
-
-/****** Projects ******/
-.projects {
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: space-between
-}
-
-.projects-info {
   width: 40%;
 }
 
-.projects-details {
-  width: 50%;
-  padding-left: 5rem;
-  display: flex;
-  flex-direction: column;
+@media screen and (max-width: 1200px) {
+  .about-info {
+    padding: 0;
+  }
+  .about-img {
+    width: 60%;
+  }
 }
 
-.project-card {
-  width: 90%;
-  background: #2a2a2a;
-  padding: 1.5rem;
-  margin-bottom: 25px;
-}
+@media screen and (max-width: 800px) {
+  .about {
+    flex-direction: column;
+  }
 
-.project-card header {
-  font-size: 1rem;
-  line-height: 1.2rem;
-  margin-bottom: 0.5rem;
-}
+  .about-info {
+    width: 100%;
+    padding: 2rem 0 0;
+  }
 
-.project-card section {
-  font-size: 0.9rem;
-  color: #ababab;
-  margin-bottom: 1.5em;
-}
+  .about-img {
+    width: 100%;
+    padding-left: 0;
+  }
 
-.project-card footer {
-  font-size: 0.8rem;
-  line-height: 1.3rem;
-}
-
-
-/****** Contact ******/
-.contact {
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
-}
-
-.contact-form input {
-  background: #2b2b2b;
-  border: 0;
-  height: 50px;
-  font-size: 16px;
-  color: #8d8d8d;
-  box-sizing: border-box;
-  width: 100%;
-  padding: 0px 20px;
-  outline: none;
-  margin-bottom: 10px;
-}
-
-.contact-form textarea {
-  width: 100%;
-  border: 0;
-  background: #2b2b2b;
-  height: 50px;
-  font-size: 16px;
-  color: #8d8d8d;
-  padding: 20px;
-  box-sizing: border-box;
-  min-height: 150px;
-}
-
-.contact-form input[type=submit] {
-  background: #1d1d1d;
-  color: #2D9CDB;
-  border: 1px solid;
-  float: right;
-  max-width: 200px;
-  cursor: pointer;
-  margin-top: 20px;
-  line-height: 50px;
-  font-size: 16px;
-  transition: 0.3s ease-out all;
-}
-
-.contact-form input[type=submit]:hover {
-  background: #2D9CDB;
-  color: #fff;
-  border-color: #2D9CDB;
-  transition: 0.3s ease-out all;
+  img {
+    width: 100% !important;
+  }
 }
