--- a/styles/projects.css
+++ b/styles/projects.css
@@ -5,16 +5,16 @@
 .projects {
   overflow: hidden;
   display: flex;
+  flex-direction: column;
 }
 
 .projects-info {
-  width: 50%;
+  width: 100%;
   padding-right: 4rem;
 }
 
 .projects-details {
-  width: 50%;
-  padding-left: 5rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
